update Workflow + linting predict

--- a/Workflow.ipynb
+++ b/Workflow.ipynb
@@ -73,7 +73,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Prediction on test/validation data"
+    "## 3. Visualising performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Hackaton_Quantum.vizualisation.vizu import prompt_roc_curve\n",
+    "\n",
+    "silos_for_validation, pas_silos_for_validation = generate_test(FINAL_PATH + '/validation')\n",
+    "\n",
+    "prompt_roc_curve(vgg_model,\n",
+    "                inception_model,\n",
+    "                silos_for_validation,\n",
+    "                pas_silos_for_validation,\n",
+    "                pas = 15\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Prediction on test/validation data"
    ]
   },
   {
@@ -92,8 +117,8 @@
    "outputs": [],
    "source": [
     "# We first need to transform the image into tensors which can be exploited by our model, it will then make predictions step by step for every new image\n",
-    "silos_for_validation, pas_silos_for_validation = generate_test(\n",
-    "    FINAL_PATH+ '/validation')\n",
+    "\n",
+    "    \n",
     "image_to_predict = generate_test(\n",
     "    FINAL_PATH + '/test'\n",
     ")\n",
