--- a/Workflow.ipynb
+++ b/Workflow.ipynb
@@ -1,53 +1,385 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
-      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ke7uCjDs6p2I"
+      },
+      "source": [
+        "# Workflow for Classification"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/MorelElian/Hackaton_Quantum;\n",
+        "!cd Hackaton_Quantum; git remote set-url origin https://MorelElian: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@github.com/MorelElian/Hackaton_Quantum.git;\n",
+        "!cd Hackaton_Quantum;git config --global user.name MorelElian;\n",
+        "!cd Hackaton_Quantum;git config --global user.email elian.morel@lapsote.net;\n",
+        "!cd Hackaton_Quantum;git fetch https://github.com/MorelElian/Hackaton_Quantum.git elian_colab_b:elian_colab_b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uGGPBOLU6wug",
+        "outputId": "d9c17835-677b-41ff-8295-04f85421b618"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Hackaton_Quantum'...\n",
+            "remote: Enumerating objects: 3169, done.\u001b[K\n",
+            "remote: Counting objects: 100% (96/96), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (66/66), done.\u001b[K\n",
+            "remote: Total 3169 (delta 40), reused 67 (delta 22), pack-reused 3073\u001b[K\n",
+            "Receiving objects: 100% (3169/3169), 176.14 MiB | 16.63 MiB/s, done.\n",
+            "Resolving deltas: 100% (57/57), done.\n",
+            "Checking out files: 100% (10012/10012), done.\n",
+            "From https://github.com/MorelElian/Hackaton_Quantum\n",
+            " * [new branch]      elian_colab_b -> elian_colab_b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cd Hackaton_Quantum;git "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s3AT-TFc8Fkb",
+        "outputId": "b6c9405a-2bb5-4b23-d3f4-fdda3b87c83d"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to branch 'elian_colab_b'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lFHrpXhO6p2L"
+      },
+      "source": [
+        "## 1. Processing data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "iCP_DfrX6p2L"
+      },
+      "outputs": [],
+      "source": [
+        "from Hackaton_Quantum.data_processing.process import create_label_folder,generate_train,generate_test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qBLAqWvh6p2M",
+        "outputId": "3a50b63a-d536-4894-a77a-e21bbd7daa71"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 1399 images belonging to 2 classes.\n",
+            "Found 400 images belonging to 2 classes.\n"
+          ]
+        }
+      ],
+      "source": [
+        "DATA_PATH = './Hackaton_Quantum/data/ai_ready/ai_ready/images'\n",
+        "CSV_PATH = './Hackaton_Quantum/data/ai_ready/ai_ready/x-ai_data.csv'\n",
+        "FINAL_PATH =  './Hackaton_Quantum/data/ai_ready/ai_ready/traitement/'\n",
+        "VGG_MODEL_PATH = './Hackaton_Quantum/models/stored_models/VGG/'\n",
+        "INCEPTION_MODEL_PATH = './Hackaton_Quantum/models/stored_models/INCEPTION/'\n",
+        "create_label_folder(\n",
+        "    DATA_PATH,\n",
+        "    CSV_PATH,\n",
+        "    FINAL_PATH\n",
+        ")\n",
+        "train, validation = generate_train(\n",
+        "    FINAL_PATH + 'train/',\n",
+        "    FINAL_PATH + 'validation/'\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cd Hackaton_Quantum;  git "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UkT76yD3-hFl",
+        "outputId": "b59bc9c3-17ab-4952-fd50-009ceda707a8"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On branch elian_colab_b\n",
+            "Untracked files:\n",
+            "  (use \"git add <file>...\" to include in what will be committed)\n",
+            "\n",
+            "\t\u001b[31mdata_processing/__pycache__/\u001b[m\n",
+            "\t\u001b[31mmodels/__pycache__/\u001b[m\n",
+            "\n",
+            "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9pzmmtGW6p2N"
+      },
+      "source": [
+        "## 2. Modeling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "gSbA44WX6p2N"
+      },
+      "outputs": [],
+      "source": [
+        "from Hackaton_Quantum.models.classification_models import generate_inception,generate_VGG"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "load_models = False"
+      ],
+      "metadata": {
+        "id": "Sl1lEDuj8gH2"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "He-Vt_fY6p2N",
+        "outputId": "c394bc13-15d9-4669-b255-318ea1faf339"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:10: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "  # Remove the CWD from sys.path while we load stuff.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50/50 [==============================] - 34s 439ms/step - loss: 0.9342 - acc: 0.6036 - val_loss: 0.5260 - val_acc: 0.7200\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:14: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "  \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50/50 [==============================] - 25s 404ms/step - loss: 3.0273 - acc: 0.5866 - val_loss: 0.4244 - val_acc: 0.8175\n"
+          ]
+        }
+      ],
+      "source": [
+        "vgg_model = generate_VGG() # generate VGG returns a fitted model\n",
+        "inception_model = generate_inception()\n",
+        "if load_models:\n",
+        "  vgg_model.load_weights(VGG_MODEL_PATH)\n",
+        "  inception_model.load_weights(INCEPTION_MODEL_PATH)\n",
+        "else:\n",
+        "  vgg_hist = vgg_model.fit_generator(train,\n",
+        "                      validation_data = validation,\n",
+        "                      steps_per_epoch = 50,\n",
+        "                      epochs = 1)\n",
+        "  inception_hist = inception_model.fit_generator(train,\n",
+        "                      validation_data = validation,\n",
+        "                      steps_per_epoch = 50,\n",
+        "                      epochs = 1)\n",
+        "  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "save_models = True"
+      ],
+      "metadata": {
+        "id": "_np5RBdG9IcQ"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if save_models: \n",
+        "  vgg_model.save_weights(VGG_MODEL_PATH)\n",
+        "  inception_model.save_weights(INCEPTION_MODEL_PATH)"
+      ],
+      "metadata": {
+        "id": "SuN1D6ew9K8P"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F54izCkD6p2N"
+      },
+      "source": [
+        "## 3. Visualising performance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9xTXPGQv6p2O"
+      },
+      "outputs": [],
+      "source": [
+        "from Hackaton_Quantum.vizualisation.vizu import prompt_roc_curve\n",
+        "\n",
+        "silos_for_validation, pas_silos_for_validation = generate_test(FINAL_PATH + '/validation')\n",
+        "\n",
+        "prompt_roc_curve(vgg_model,\n",
+        "                inception_model,\n",
+        "                silos_for_validation,\n",
+        "                pas_silos_for_validation,\n",
+        "                pas = 15\n",
+        "                )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OFB6SDe76p2O"
+      },
+      "source": [
+        "## 4. Prediction on test/validation data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qQNabNSz6p2O"
+      },
+      "outputs": [],
+      "source": [
+        "from Hackaton_Quantum.evaluation.predict import evaluate,predict"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hXZBi8Lm6p2P"
+      },
+      "outputs": [],
+      "source": [
+        "# We first need to transform the image into tensors which can be exploited by our model, it will then make predictions step by step for every new image\n",
+        "\n",
+        "    \n",
+        "image_to_predict = generate_test(\n",
+        "    FINAL_PATH + '/test'\n",
+        ")\n",
+        "\n",
+        "metrics_evaluation_inception = evaluate(inception_model,silos_for_validation,pas_silos_for_validation)\n",
+        "metrics_evaluation_vgg = evaluate(vgg_model,silos_for_validation,pas_silos_for_validation)\n",
+        "\n",
+        "predictions_on_test_inception = predict(inception_model,image_to_predict)\n",
+        "predictions_on_test_vgg = predict(vgg_model,image_to_predict)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WcFru2nK6p2P"
+      },
+      "source": [
+        "## "
+      ]
     }
-   ],
-   "source": [
-    "import pandas\n"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "hackaton",
+      "language": "python",
+      "name": "hackaton"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.13"
+    },
+    "orig_nbformat": 4,
+    "vscode": {
+      "interpreter": {
+        "hash": "e1c280fbe7a450530379d613862413e9e7731695a7f0747eaf00d5ae1c63cca7"
+      }
+    },
+    "colab": {
+      "provenance": []
+    },
+    "accelerator": "GPU"
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  }
- ],
- "metadata": {
-  "interpreter": {
-   "hash": "c2afb504473692a72c1edbcc951aaab44e0303f34e94e1489bba4613d8c315f9"
-  },
-  "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
