--- a/Workflow.ipynb
+++ b/Workflow.ipynb
@@ -29,10 +29,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## You might want to change those paths, depending on the fact that you are working on collab or not\n",
     "DATA_PATH = './Hackaton_Quantum/data/ai_ready/ai_ready/images'\n",
     "CSV_PATH = './Hackaton_Quantum/data/ai_ready/ai_ready/x-ai_data.csv'\n",
     "FINAL_PATH =  './Hackaton_Quantum/data/ai_ready/ai_ready/traitement/'\n",
-    "create_label_folder(\n",
+    "VGG_MODEL_PATH = './Hackaton_Quantum/models/stored_models/VGG/'\n",
+    "INCEPTION_MODEL_PATH = './Hackaton_Quantum/models/stored_models/INCEPTION/'\n",
+    "create_label_folder(    \n",
     "    DATA_PATH,\n",
     "    CSV_PATH,\n",
     "    FINAL_PATH\n",
@@ -51,12 +54,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from Hackaton_Quantum.models.classification_models import generate_inception,generate_VGG"
+    "The folders models/stored_models/VGG and models/stored_models/INCEPTION contains pre trained models for this tasks, if you want to load them -> load_models = true.  \n",
+    "If you want to calculate new weights, set load_models to false : it can be much longer"
    ]
   },
   {
@@ -65,8 +67,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vgg_model = generate_VGG(train,validation) # generate VGG returns a fitted model\n",
-    "inception_model = generate_inception(train,validation)"
+    "from Hackaton_Quantum.models.classification_models import generate_inception,generate_VGG\n",
+    "load_models = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg_model = generate_VGG() # generate VGG returns a fitted model\n",
+    "inception_model = generate_inception()\n",
+    "if load_models : \n",
+    "    vgg_model.load_weights(VGG_MODEL_PATH)\n",
+    "    inception_model.weights(INCEPTION_MODEL_PATH)\n",
+    "else:\n",
+    "    vgg_model.fit_generator(train, validation_data = validation, steps_per_epoch = 50, epochs = 10)\n",
+    "    inception_model.fit_generator(train, validation_data = validation, steps_per_epoch = 50, epochs = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_models = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if save_models:\n",
+    "    vgg_model.save_weights(VGG_MODEL_PATH)\n",
+    "    inception_model.save_weights(INCEPTION_MODEL_PATH)\n"
    ]
   },
   {
@@ -98,6 +136,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can now select the best threshold depending on waht we want to do.   \n",
+    "For example, in order to do the segmentation , we need a very good precision, therefore, we will consider the vgg model with a threshold equal to 0.7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Prediction on test/validation data"
    ]
   },
@@ -122,9 +168,9 @@
     "image_to_predict = generate_test(\n",
     "    FINAL_PATH + '/test'\n",
     ")\n",
-    "\n",
-    "metrics_evaluation_inception = evaluate(inception_model,silos_for_validation,pas_silos_for_validation)\n",
-    "metrics_evaluation_vgg = evaluate(vgg_model,silos_for_validation,pas_silos_for_validation)\n",
+    "# We recompute the metrics for the best models selected\n",
+    "metrics_evaluation_inception = evaluate(inception_model,silos_for_validation,pas_silos_for_validation,threshold = 0.7)\n",
+    "metrics_evaluation_vgg = evaluate(vgg_model,silos_for_validation,pas_silos_for_validation, threshold = 0.6)\n",
     "\n",
     "predictions_on_test_inception = predict(inception_model,image_to_predict)\n",
     "predictions_on_test_vgg = predict(vgg_model,image_to_predict)"
