add git command for colab

--- a/Workflow.ipynb
+++ b/Workflow.ipynb
@@ -11,6 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 0. Working on colab\n",
+    "You have to clone the repo and get some credentials in order to work on colab and access gpu compautation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/MorelElian/Hackaton_Quantum;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Processing data"
    ]
   },
